# BlamePrompt

./: .gitignore  CHANGELOG.md  Cargo.toml  ENTERPRISE_PLAN.md  README.md  blameprompt-audit.md  blameprompt-budget.md  blameprompt-report.md  install.ps1  install.sh  test_e2e.sh
src/: main.rs
src/commands/: blame.rs  budget.rs  checkpoint.rs  compliance.rs  dash.rs  doctor.rs  enterprise.rs  license_scan.rs  login.rs  mod.rs  model_recommend.rs  profile.rs  prompt_injection.rs  report.rs  secret_rotation.rs  staging.rs  supply_chain.rs  sync_cloud.rs  uninstall.rs  update.rs  vuln_scan.rs
src/core/: api_client.rs  auth.rs  config.rs  db.rs  mod.rs  model_classifier.rs  receipt.rs  redact.rs  session_stats.rs  transcript.rs  util.rs
src/git/: hooks.rs  init_hooks.rs  notes.rs  wrap.rs
src/integrations/: amp.rs  claude_hooks.rs  codex.rs  continue_ai.rs  copilot.rs  cursor.rs  droid.rs  gemini.rs  junie.rs  mod.rs  opencode.rs  replit.rs  rovo_dev.rs  windsurf.rs
