[package]
name = "blameprompt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
git2 = "0.19"
regex = "1.10"
comfy-table = "7.1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
